--- a/src/markdown/english/10. Movement.md
+++ b/src/markdown/english/10. Movement.md
@@ -13,7 +13,7 @@ There’s no single permanent solution to happiness. Rather, achieving happiness
 
 A part of your brain, the basal ganglia, is your autopilot. It does things without you thinking about it, like navigating routes you frequently walk or drive. It frees up the rest of your brain to think about other things. ((Refer to this in reasoning for 15day thing))
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="-------------" src="http://localhost:8080/md_images/divider_1.png" height="100px"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="-------------" src="https://burgeon-alpha.vercel.app/md_images/divider_1.png" height="100px"></div>
 
 Many of you may be thankful for this book. You may want to show appreciation but I am not an idol. In the scheme of things, I know nothing, and can grow so much more. And so can you. If you want to thank me, purchase a physical copy for a friend you think may benefit from it, and give opportunity to those who you see in a bad place. Thank you for reading! <3
 
