--- a/src/markdown/english/3. Effects.md
+++ b/src/markdown/english/3. Effects.md
@@ -16,7 +16,7 @@ Contrary to popular belief, dopamine's main effect is not pleasure. Dopamine's p
 
 Dysfunctions in the dopaminergic system result in unhealthy changes in anticipation and it causes immeasurable effects on a person's life.
 
-<div title="Dopamine Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;filter:contrast(100%)"><img alt="Image of dopamine structure (not found)" src="http://localhost:8080/md_images/dopamine.png" height="250px"></div>
+<div title="Dopamine Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;filter:contrast(100%)"><img alt="Image of dopamine structure (not found)" src="https://burgeon-alpha.vercel.app/md_images/dopamine.png" height="250px"></div>
 
 What happens with porn is the dopamine system becomes downregulated. When we are with a single partner, the body limits the amount of dopamine that can be created. Porn, however, releases more and more dopamine when you seek and search through multiple partners for "just the right video".
 
@@ -30,7 +30,7 @@ You may think that a huge amount of dopamine would make you feel better, but tha
 
 To compensate for the unnaturally high amount of dopamine that has entered your body, your dopamine system gets **downregulated**.
 
-<div title="Downregulation Process" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of downregulation process (not found)" src="http://localhost:8080/md_images/downregulation.jpeg" height="250px"></div>
+<div title="Downregulation Process" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of downregulation process (not found)" src="https://burgeon-alpha.vercel.app/md_images/downregulation.jpeg" height="250px"></div>
 
 You may think that the body makes everything fine again, but this is ignoring the side effects of this downregulation. First of all, the body builds a dependence upon porn as it becomes further downregulated every consecutive viewing, and nothing else will give that same level of dopamine it needs to feel "normal".
 
@@ -42,7 +42,7 @@ You may make fun of these people who go into a state of disarray ("coomers") but
 
 The good thing is that the damage to the dopamine receptors is not permanent. You have the ability to upregulate your dopamine receptors after this damage by stopping porn use and other overstimuli. Your greatest superpower is the ability to change yourself.
 
-<div title="Some Brain" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a brain (not found)" src="http://localhost:8080/md_images/brain_color.png" height="250px"></div>
+<div title="Some Brain" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a brain (not found)" src="https://burgeon-alpha.vercel.app/md_images/brain_color.png" height="250px"></div>
 
 Increased brain fog is another effect that porn creates. Porn lowers brain chemicals (acetylcholine) vital in cognitive functioning. This can make active users feel like they are less able to function actively than before (however, not many people realize it because this happens slowly). Porn also has been studied to decrease gray matter in the brain.
 
@@ -70,7 +70,7 @@ People call masturbation "self-love" but really it is self-sabotage. When sexual
 
 I have talked about dopamine being mostly an anticipation chemical. This is true, as it is released before an orgasm during the seek-and-search of online "partners". So what is the effect we believe to be pleasure after an orgasm? This is not caused by dopamine, but by endorphins (bodily-produced opioids).
 
-<div title="Endorphin Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of endorphin structure" src="http://localhost:8080/md_images/endorphin.png" height="250px"></div>
+<div title="Endorphin Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of endorphin structure" src="https://burgeon-alpha.vercel.app/md_images/endorphin.png" height="250px"></div>
 
 On orgasm, endorphins are released. However, at the same time, the dopamine that was elevated in the build-up crashes down.
 
