--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -6,7 +6,7 @@ But once your survival needs are met, then what's left is the biggest primitive 
 
 Instead of being in this lethargic state, where your body acts like it has achieved what it needs in life, you can create the complete opposite state by retaining your semen, and in doing so, retaining your sexual energy. This is called transmutation.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="http://localhost:8080/md_images/field_aura.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="https://burgeon-alpha.vercel.app/md_images/field_aura.png" height="250px" class="mdimg"></div>
 
 Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. It may seem weird, but it has been practiced in professional boxing for hundreds of years.
 
@@ -34,7 +34,7 @@ There are several outlets for sexual transmutation. These are either physical or
 
 Transmutation does not have a how-to guide. How-tos do not work except for extreme basics. You kind of just get a feel for it, when you notice it. And when you do, you realize what you were missing this whole time.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="http://localhost:8080/md_images/circle_aura.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="https://burgeon-alpha.vercel.app/md_images/circle_aura.png" height="250px" class="mdimg"></div>
 
 ### Physical
 
@@ -116,4 +116,4 @@ If you do not spend the energy you receive you will likely waste it via masturba
 
 If you masturbate or have sex too often it will negatively impact your body and energy levels. Instead of wasting your energy, look for the value within sexual energy, and it can be transmuted into things you find meaningful - this is how you can propel and find movement in your life.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Diagram explaining essentialism and direction of energy (not found)" src="http://localhost:8080/md_images/essentialism.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Diagram explaining essentialism and direction of energy (not found)" src="https://burgeon-alpha.vercel.app/md_images/essentialism.png" height="250px" class="mdimg"></div>
